Updated Routing, New Components
Added Home and Topic components
Added routing for those components within navigation bar (Home is now the default page via routing redirection)
Updated navigation bar to show which page is active
Updated styling and HTML for components
Updated User, Group, and Post templates to reflect database collections

--- a/app/groups/groups.component.html
+++ b/app/groups/groups.component.html
@@ -1,4 +1,10 @@
-<p>
+<h3>
   Group Component
-</p>
+</h3>
+<br>
+<!--List of Associated Groups-->
+<p class="tab">Your Groups</p><br><br>
 
+
+<!--List of All Groups-->
+<p class="tab">All Groups</p>
