--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -15,7 +15,7 @@
           <input type="text" class="form-control" name="password" ngModel>
       </div>
       
-      <button class="btn.btn-primary" type="submit">Login</button>
-      <a routerLink ="/register" class="btn btn-link">Register</a>
+      <button class="btn btn-primary" type="submit">Login</button> <!--Need to add function to send data-->
+      <a routerLink ="/register" class="btn btn-link">Register</a> 
   </form>
 </div>
