--- a/app/posts/posts.component.html
+++ b/app/posts/posts.component.html
@@ -1,3 +1,10 @@
-<p >
+<h3>
   Posts Component
-</p>
+</h3>
+<br>
+<!--List of Associated Groups-->
+<p class="tab">Your Posts</p><br><br>
+
+
+<!--List of All Groups-->
+<p class="tab">All Posts</p>
