--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,17 +1,6 @@
-<app-nav-bar></app-nav-bar> <!--Navigation Bar-->
+<!-----Navigation Bar----->
+<app-nav-bar></app-nav-bar>
 
-<br><!------Login Form------><br>
 
-<div>
-    <app-login></app-login>
-</div>
-
-<br><!------Resgister Form------><br>
-
-<div>
-    <app-register></app-register>
-</div>
-
-<br><br>
 
 <router-outlet></router-outlet>
