--- a/app/profile/profile.component.html
+++ b/app/profile/profile.component.html
@@ -1,3 +1,21 @@
-<p>
-  Profile Component
-</p>
+<div>
+  <app-login></app-login>
+</div>
+
+<br><!------Resgister Form------><br>
+
+<!-- 
+  Could implement hide/show for register form when 
+  Register button is pushed,
+  or start at login component, and switch between login
+  and register components with links
+-->
+
+<!--
+  
+<div>
+  <app-register></app-register>
+</div>
+
+-->
+<br><br>
