--- a/app/register/register.component.html
+++ b/app/register/register.component.html
@@ -5,14 +5,14 @@
       Input Check:
       {{ registerForm.value | json }}
     
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label>First Name</label>
         <input type="text" class="form-control" name="firstName" ngModel>
     </div>
       <div class="form-group">
         <label>Last Name</label>
         <input type="text" class="form-control" name="lastName" ngModel>
-    </div>  
+    </div>   -->
     <div class="form-group">
       <label>Email</label>
       <input type="email" class="form-control" name="email" ngModel>
@@ -27,6 +27,6 @@
       </div>
       
       <button class="btn btn-primary" type="submit">Register</button>
-      <a routerLink ="/login" class="btn btn-link">Cancel</a>
+      <a routerLink ="/profile" class="btn btn-link">Cancel</a>
   </form>
 </div>
