--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,21 +1,34 @@
-<!--Form for Login-->
-<div class="container-fluid">
-  <h2>Login</h2>
-  <form #userForm="ngForm">
-    
-        Input Check:
-        {{ userForm.value | json }}
-    
-      <div class="form-group">
-          <label>Username</label>
-          <input type="text" class="form-control" name="username" ngModel>
-      </div>
-      <div class="form-group">
-          <label>Password</label>
-          <input type="text" class="form-control" name="password" ngModel>
-      </div>
-      
-      <button class="btn btn-primary" type="submit">Login</button> <!--Need to add function to send data-->
-      <a routerLink ="/register" class="btn btn-link">Register</a> 
-  </form>
-</div>
+<div class="medium-list">
+    <div class="list-viewer-wrapper">
+      <div class="list-header-title">Register</div>
+  
+      <form [formGroup]="loginForm" (ngSubmit)="loginForm.valid && onLoginSubmit()" novalidate>
+        <div class="form-container">  
+          <mat-form-field>
+              <input id="email"
+                     matInput
+                     formControlName="email"
+                     [(ngModel)]="user.email"
+                     placeholder="Enter your email" />
+            </mat-form-field>
+  
+          <mat-form-field>
+              <input id="password"
+                     matInput
+                     formControlName="password"
+                     [(ngModel)]="user.password"
+                     placeholder="Enter your password"
+                     [type]="hide ? 'password':'text'" />
+                <mat-icon matSuffix (click)="hide = !hide">
+                  {{hide ? 'visibility' : 'visibility_off'}}
+                </mat-icon>
+            </mat-form-field>
+  
+            <button mat-button type="submit" 
+                    class="mat-raised-button mat-primary" 
+                    [disabled]="!loginForm.valid">Login</button>
+            <button mat-button routerLink="/register" class="divider">Register</button>
+        </div>
+      </form>
+    </div>
+  </div>
